--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "14.2.23",
     "next-themes": "^0.4.6",
     "react": "^18",
+    "react-day-picker": "^9.6.3",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.7",
